@@ -24,3 +24,5 @@
 2004-10-08 BV : In Formex.py: fixed replace() function, replaced copy.deepcopy
 		by numarray's copy(), added props to Formex. 
 2004-10-09 BV : Fully implemented props; added color plotting.
+2004-10-15 BV : Added unique,nodes,remove; plotting of uniplex formex;
+		renamed withProp to hasProp;
